--- a/bauchbinde.html
+++ b/bauchbinde.html
@@ -6,7 +6,7 @@
 		<style>
 			html, body {
 				margin: 0px auto;
-				font-family: Some Time Later, Tahoma, Verdana, Ubuntu, sans-serif;
+				font-family: Some Time Later, Comic Sans MS, Tahoma, Verdana, Ubuntu, sans-serif;
 			}
 			
 			#tickerContainer {
